[gd_scene load_steps=11 format=3 uid="uid://dlav4dnhlxjwh"]

[ext_resource type="Script" uid="uid://bj7iy7b2kbssv" path="res://scenes/main.gd" id="1_tbgi4"]
[ext_resource type="Texture2D" uid="uid://cos4nyfxpuh0o" path="res://assets/graphics/full_resolution/desk.png" id="2_tbgi4"]
[ext_resource type="Texture2D" uid="uid://07v6xbmydnwl" path="res://assets/graphics/full_resolution/paper_highlight.png" id="3_tefeu"]
[ext_resource type="Texture2D" uid="uid://dx0lnkmsybeer" path="res://assets/graphics/full_resolution/notes_highlight.jpg" id="4_o6xl0"]
[ext_resource type="Texture2D" uid="uid://cjbmy8i1bmwrm" path="res://assets/graphics/full_resolution/archive_highlight.png" id="5_tipki"]
[ext_resource type="Texture2D" uid="uid://dwnvyq7rg7j5l" path="res://assets/graphics/full_resolution/phone_highlight.png" id="6_tefeu"]
[ext_resource type="Texture2D" uid="uid://boqjbr5ai6b7t" path="res://assets/graphics/full_resolution/Mug_Highlight.png" id="7_o6xl0"]
[ext_resource type="PackedScene" uid="uid://cb04t4ifjb3pa" path="res://scenes/pause.tscn" id="8_tipki"]
[ext_resource type="PackedScene" uid="uid://dtygpitmw4tm8" path="res://scenes/notepad.tscn" id="10_choun"]
[ext_resource type="PackedScene" uid="uid://capa8f5hs0iv7" path="res://scenes/transcript.tscn" id="10_ya4ey"]

[node name="Main" type="Node2D"]
script = ExtResource("1_tbgi4")

[node name="background" type="Sprite2D" parent="."]
texture = ExtResource("2_tbgi4")
offset = Vector2(960, 540)

[node name="AreaPaper" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaPaper"]
polygon = PackedVector2Array(1132, 330, 1110, 456, 1103, 564, 1117, 728, 1133, 876, 1110, 904, 1116, 949, 709, 957, 686, 865, 638, 663, 625, 554, 629, 495, 621, 368, 651, 365, 649, 332, 855, 318, 1036, 314)

[node name="AreaNoteblock" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaNoteblock"]
polygon = PackedVector2Array(1311, 524, 1336, 500, 1551, 491, 1597, 512, 1597, 552, 1658, 891, 1622, 935, 1313, 955, 1303, 725)

[node name="AreaArchive" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaArchive"]
polygon = PackedVector2Array(0, 656, 287, 647, 396, 650, 447, 707, 468, 912, 484, 1080, 1, 1079)

[node name="AreaPhone" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaPhone"]
polygon = PackedVector2Array(252, 27, 374, 59, 429, 113, 473, 296, 417, 383, 305, 494, 263, 497, 86, 396, 49, 229, 93, 158, 214, 41)

[node name="AreaMug" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaMug"]
polygon = PackedVector2Array(977, 0, 951, 32, 952, 75, 977, 133, 1034, 158, 1087, 146, 1106, 128, 1149, 139, 1174, 132, 1162, 111, 1130, 82, 1129, 47, 1120, 9, 1112, 0)

[node name="PaperHighlights" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_tefeu")
offset = Vector2(960, 540)

[node name="NotesHighlights" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_o6xl0")
offset = Vector2(960, 540)

[node name="ArchiveHighlights" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_tipki")
offset = Vector2(960, 540)

[node name="PhoneHighlights" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.81, 0.81, 0.81, 0.752941)
texture = ExtResource("6_tefeu")
offset = Vector2(960, 560.86)

[node name="MugHighlights" type="Sprite2D" parent="."]
visible = false
position = Vector2(1069, 124)
scale = Vector2(0.465, 0.465)
texture = ExtResource("7_o6xl0")

[node name="Pause" parent="." instance=ExtResource("8_tipki")]
visible = false

[node name="Transcript" parent="." instance=ExtResource("10_ya4ey")]
offset_left = 674.0
offset_top = 397.0
offset_right = 1073.0
offset_bottom = 950.0
rotation = -0.0680678

[node name="Notepad" parent="." instance=ExtResource("10_choun")]
offset_left = 1323.0
offset_top = 570.0
offset_right = 1576.0
offset_bottom = 934.0

[connection signal="mouse_entered" from="AreaPaper" to="." method="_on_area_paper_mouse_entered"]
[connection signal="mouse_exited" from="AreaPaper" to="." method="_on_area_paper_mouse_exited"]
[connection signal="mouse_entered" from="AreaNoteblock" to="." method="_on_area_noteblock_mouse_entered"]
[connection signal="mouse_exited" from="AreaNoteblock" to="." method="_on_area_noteblock_mouse_exited"]
[connection signal="mouse_entered" from="AreaArchive" to="." method="_on_area_archive_mouse_entered"]
[connection signal="mouse_exited" from="AreaArchive" to="." method="_on_area_archive_mouse_exited"]
[connection signal="input_event" from="AreaPhone" to="." method="_on_area_phone_input_event"]
[connection signal="mouse_entered" from="AreaPhone" to="." method="_on_area_phone_mouse_entered"]
[connection signal="mouse_exited" from="AreaPhone" to="." method="_on_area_phone_mouse_exited"]
[connection signal="input_event" from="AreaMug" to="." method="_on_area_mug_input_event"]
[connection signal="mouse_entered" from="AreaMug" to="." method="_on_area_mug_mouse_entered"]
[connection signal="mouse_exited" from="AreaMug" to="." method="_on_area_mug_mouse_exited"]
